<resources>
    <string name="app_name">NavigationDrawerApp_CodeMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inbox">Inbox</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_archieve">Archieve</string>
</resources>
