<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.navigationdrawerapp_codemail.ui.home.HomeFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/inbox_fragment" />

    <fragment
        android:id="@+id/nav_sent"
        android:name="com.example.navigationdrawerapp_codemail.ui.gallery.GalleryFragment"
        android:label="@string/menu_sent"
        tools:layout="@layout/sent_fragment" />
    <fragment
        android:id="@+id/nav_outbox"
        android:name="com.example.navigationdrawerapp_codemail.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_outbox"
        tools:layout="@layout/outbox_fragment" />
    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.navigationdrawerapp_codemail.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_outbox"
        tools:layout="@layout/trash_fragment" />
    <fragment
        android:id="@+id/nav_archieve"
        android:name="com.example.navigationdrawerapp_codemail.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_outbox"
        tools:layout="@layout/archieve_fragment" />

</navigation>